--- a/gradle.properties
+++ b/gradle.properties
@@ -10,9 +10,9 @@ loader_version=0.17.2
 loom_version=1.11-SNAPSHOT
 
 # Mod Properties
-mod_version=0.0.0
+mod_version=0.0.0-Alpha.1
 maven_group=com.example
-archives_base_name=modid
+archives_base_name=ForsakenLight
 
 # Dependencies
 fabric_version=0.128.2+1.21.5
