--- a/gradle.properties
+++ b/gradle.properties
@@ -11,11 +11,11 @@ loom_version=1.11-SNAPSHOT
 
 # Mod Properties
 mod_version=0.0.0-Alpha.1
-maven_group=com.example
+maven_group=com.buriedservers
 archives_base_name=ForsakenLight
 
 # Dependencies
 fabric_version=0.128.2+1.21.5
 
 #Java Version
-org.gradle.java.home=C:\\Program Files\\Java\\jdk-24
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-21
