--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,13 @@ loom {
 	splitEnvironmentSourceSets()
 
 	mods {
-		"modid" {
+		"buriedservers" {
 			sourceSet sourceSets.main
-			sourceSet sourceSets.client
 		}
 	}
 
+    mixin{defaultRefmapName.set("buriedservers.refmap.json")
+    }
 }
 
 dependencies {
